[project]
name = "pytheus"
version = "0.0.3"
authors = [
  { name="Llandy Riveron Del Risco", email="llandy3d@gmail.com" },
]
description = "playing with metrics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
repository = "https://github.com/Llandy3d/pytheus"

[project.optional-dependencies]
test = [
  "pytest >= 7.0.0",
]

redis = [
  "redis >= 4.0.0",
]
