[project]
name = "pytheus"
version = "0.0.9"
authors = [
  { name="Llandy Riveron Del Risco", email="llandy3d@gmail.com" },
]
description = "playing with metrics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Llandy3d/pytheus"
Documentation = "https://pythe.us"

[project.optional-dependencies]
test = [
  "pytest >= 7.0.0",
  "mypy == 1.1.1",
  "ruff == 0.0.260",
  "black == 23.3.0",
  "isort == 5.12.0",
  "tox == 4.4.11",

  # mypy types
  "types-redis == 4.5.4.0",
]

redis = [
  "redis >= 4.0.0",
]

docs = [
    "mkdocs == 1.4.2",
    "mkdocs-material == 9.1.5",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["venv", "example.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/test_exposition.py" = ["E501"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.black]
line-length = 100
